api/crates/postgres/tests/integration/media/snapshots/integration__media__update_by_id____test_context_wrapped_with_sources_succeeds.snap
---
source: crates/postgres/tests/integration/media/update_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "media"."id",
  "media"."created_at",
  "media"."updated_at",
  "replicas"."id" AS "replica_id"
FROM
  "media"
INNER JOIN
  "replicas" ON "replicas"."medium_id" = "media"."id"
WHERE
  "media"."id" = $1
ORDER BY
  "media"."id" ASC,
  "replicas"."display_order" ASC
FOR UPDATE'''
rows_affected = 3
rows_returned = 3

[[queries]]
sql = '''
INSERT INTO
  "media_sources" ("medium_id", "source_id")
VALUES
  ($1, $2),
  ($3, $4)
ON CONFLICT
DO NOTHING'''
rows_affected = 1
rows_returned = 0

[[queries]]
sql = '''
DELETE FROM
  "media_sources"
WHERE
  "source_id" IN ($1)'''
rows_affected = 1
rows_returned = 0

[[queries]]
sql = '''
INSERT INTO
  "media_tags" ("medium_id", "tag_id", "tag_type_id")
VALUES
  ($1, $2, $3),
  ($4, $5, $6)
ON CONFLICT
DO NOTHING'''
rows_affected = 1
rows_returned = 0

[[queries]]
sql = '''
DELETE FROM
  "media_tags"
WHERE
  "medium_id" = $1
  AND ("tag_id", "tag_type_id") IN (($2, $3))'''
rows_affected = 1
rows_returned = 0

[[queries]]
sql = '''
UPDATE
  "media"
SET
  "updated_at" = CURRENT_TIMESTAMP
WHERE
  "id" = $1
RETURNING
  "id",
  "created_at",
  "updated_at"'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  "medium_id",
  "source_id",
  "sources"."external_metadata" AS "source_external_metadata",
  "sources"."external_metadata_extra" AS "source_external_metadata_extra",
  "sources"."created_at" AS "source_created_at",
  "sources"."updated_at" AS "source_updated_at",
  "external_services"."id" AS "external_service_id",
  "external_services"."slug" AS "external_service_slug",
  "external_services"."kind" AS "external_service_kind",
  "external_services"."name" AS "external_service_name",
  "external_services"."base_url" AS "external_service_base_url",
  "external_services"."url_pattern" AS "external_service_url_pattern"
FROM
  "media_sources"
INNER JOIN
  "sources" ON "sources"."id" = "media_sources"."source_id"
INNER JOIN
  "external_services" ON "external_services"."id" = "sources"."external_service_id"
WHERE
  "media_sources"."medium_id" IN ($1)
ORDER BY
  "media_sources"."medium_id" ASC,
  "external_services"."slug" ASC,
  "sources"."external_metadata" ASC'''
rows_affected = 2
rows_returned = 2

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0
